package model;

import javafx.scene.layout.Pane;

    public interface ChristmasTree {
        void draw(Pane pane);
    }