@startuml

title __TASK8's Class Diagram__\n

  namespace  {
    namespace om.example.task8 {
      class com.example.task8.HelloApplication {
      }
    }
  }
  

  namespace  {
    namespace om.example.task8 {
      class com.example.task8.HelloController {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.ChrisrmasTreeImpl {
      }
    }
  }
  

  namespace  {
    namespace odel {
      interface model.ChristmasTree {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.Girland {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.Present {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.Star {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.TreeDecorator {
      }
    }
  }
  

  com.example.task8.HelloApplication -up-|> javafx.application.Application
  model.ChrisrmasTreeImpl .up.|> model.ChristmasTree
  model.Girland -up-|> model.TreeDecorator
  model.Present -up-|> model.TreeDecorator
  model.Star -up-|> model.TreeDecorator
  model.TreeDecorator .up.|> model.ChristmasTree
  model.TreeDecorator o-- model.ChristmasTree : tree


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
